@@ -1,7 +1,10 @@
 {{$NEXT}}
-
+          Improvements:
+          - enlargen private parts (the dilemma of POD for _subs)
+          - Test multiple location types
+          
 0.02      2010-12-29 14:28:29 America/Denver
-          Improvements;
+          Improvements:
           - Add raw_data attribute that has the raw XML
           - Validate XML before using just in case.
           - improve Synopsis
